adding viewport scaling and using SRI

--- a/index.html
+++ b/index.html
@@ -2,19 +2,20 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Third Sector Design</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="jumbotron">
         <div class="container">
             <h1><img class="img-responsive" src="3sd-logo.png" alt="Third Sector Design"></h1>
-            <p class="lead text-center">A web technology company that helps non profits and political organisations maximise their impact.</p>
+            <p class="lead text-center">A web technology company that helps non profits and political organisations to maximise their impact.</p>
         </div>
     </div>
     <div class="container">
@@ -23,7 +24,7 @@
 
             <div class="col-sm-4">
                 <h2>Projects</h2>
-                <p>We specialise in CRM and website implementations and campaign management. We're experts in <a href="https://civicrm.org">CiviCRM</a>, <a href="https://drupal.org">Drupal</a> and <a href="https://wordpress.org">Wordpress</a>.</p>
+                <p>We specialise in CRM and website implementations and in campaign management. We're experts in <a href="https://civicrm.org">CiviCRM</a>, <a href="https://drupal.org">Drupal</a> and <a href="https://wordpress.org">Wordpress</a>.</p>
             </div>
 
             <div class="col-sm-4">
@@ -40,8 +41,11 @@
 
         <hr />
         <p class="text-center small">Third Sector Design Ltd. UK Company number 06939100.</p>
+
+    </div>
+
+     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
 </body>
-
-
 
 </html>
